# cleanpixels

./: .gitignore  LICENSE.md  README.md  pyproject.toml
cleanpixels/: image_utils.py  main.py  theme.py  windows_utils.py
cleanpixels/utils/: ui_data.py  ui_functions.py  windows.py
src/: main.py
