[project]
name = "cleanpixels"
version = "2026.06.11"
description = "Compress images and remove EXIF metadata with a clean and simple desktop interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.3.1",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
